[gd_scene load_steps=2 format=3 uid="uid://t8hul080agge"]

[ext_resource type="Script" uid="uid://dlc4di33hnjw8" path="res://scenes/enemy_hover_info.gd" id="1_xq5lu"]

[node name="EnemyHoverInfo" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("1_xq5lu")

[node name="EnemyInfo" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(640, 720)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 588.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="EnemyInfo"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyInfo/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EnemyInfo/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnemyName" type="RichTextLabel" parent="EnemyInfo/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[font_size=32]Twiggle"
fit_content = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AttackInfo" type="RichTextLabel" parent="EnemyInfo/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(512, 48)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[font_size=32]BASICATTACK"
fit_content = true
scroll_active = false

[node name="VBoxContainer2" type="VBoxContainer" parent="EnemyInfo/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollText" type="RichTextLabel" parent="EnemyInfo/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(512, 48)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[font_size=32](Scroll for further information.)"
fit_content = true
scroll_active = false

[node name="BuffList" type="VBoxContainer" parent="EnemyInfo/MarginContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EnemyInfo/MarginContainer/BuffList"]
layout_mode = 2

[node name="EnemyName2" type="RichTextLabel" parent="EnemyInfo/MarginContainer/BuffList/HBoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[font_size=32]Twiggle"
fit_content = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyInfo/MarginContainer/BuffList"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="VBoxContainer" parent="EnemyInfo/MarginContainer/BuffList/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="EnemyInfo/MarginContainer/BuffList"]
layout_mode = 2

[node name="ScrollText" type="RichTextLabel" parent="EnemyInfo/MarginContainer/BuffList/VBoxContainer2"]
custom_minimum_size = Vector2(512, 48)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[font_size=32](Scroll for further information.)"
fit_content = true
scroll_active = false
